@@ -267,7 +267,7 @@ if ($action eq "addsysgroup") {
         }
     }
 
-    printf (gtx("Adding group `%s' (%d) ...\n"),$new_name,$new_gid) if $verbose;
+    printf (gtx("Adding group `%s' (GID %d) ...\n"),$new_name,$new_gid) if $verbose;
     &invalidate_nscd("group");
     my $groupadd = &which('groupadd');
     &systemcall($groupadd, '-g', $new_gid, $new_name);
@@ -296,7 +296,7 @@ if ($action eq "addgroup") {
         }
     }
 
-    printf (gtx("Adding group `%s' (%s) ...\n"),$new_name,$new_gid) if $verbose;
+    printf (gtx("Adding group `%s' (GID %s) ...\n"),$new_name,$new_gid) if $verbose;
     &invalidate_nscd("group");
     my $groupadd = &which('groupadd');
     &systemcall($groupadd, '-g', $new_gid, $new_name);
@@ -386,19 +386,19 @@ if ($action eq "addsysuser") {
 	elsif ($make_group_also){ $new_gid=$new_uid; $ingroup_name=$new_name; }
 	else { dief (gtx("Internal error")); }
     }
-    printf (gtx("Adding system user `%s' with UID %d ...\n"),$new_name,$new_uid) if $verbose;
+    printf (gtx("Adding system user `%s' (UID %d) ...\n"),$new_name,$new_uid) if $verbose;
 
     &invalidate_nscd();
     # if we reach this point, and the group does already exist, we can use it.
     if ($make_group_also && !getgrnam($new_name)) {
-	printf (gtx("Adding new group `%s' (%d) ...\n"),$new_name,$new_gid) if $verbose;
+	printf (gtx("Adding new group `%s' (GID %d) ...\n"),$new_name,$new_gid) if $verbose;
 	$undogroup = $new_name;
        my $groupadd = &which('groupadd');
 	&systemcall($groupadd, '-g', $new_gid, $new_name);
 	&invalidate_nscd("group");
     }
 
-    printf gtx("Adding new user `%s' (%d) with group `%s' ...\n"),$new_name,$new_uid,$ingroup_name
+    printf gtx("Adding new user `%s' (UID %d) with group `%s' ...\n"),$new_name,$new_uid,$ingroup_name
 	if $verbose;
     $home_dir = $special_home || &homedir($new_name, $ingroup_name);
 	$shell = $special_shell || '/bin/false';
@@ -412,9 +412,9 @@ if ($action eq "addsysuser") {
     # non-zero exit code and we need to do special handling here!
     if (system($chage, '-M', '99999', $new_name)) {
 	if( ($?>>8) ne 15 ) {
-	    &cleanup(sprintf(gtx("%s: `%s' returned error code %d. Exiting.\n"), $0, "$chage -M 99999 $new_name", $?>>8))
+	    &cleanup(sprintf(gtx("`%s' returned error code %d. Exiting.\n"), "$chage -M 99999 $new_name", $?>>8))
 	      if ($?>>8);
-	    &cleanup(sprintf(gtx("%s: `%s' exited from signal %s. Exiting.\n"), $0, "$chage -M 99999 $new_name", $?&255));
+	    &cleanup(sprintf(gtx("`%s' exited from signal %s. Exiting.\n"), "$chage -M 99999 $new_name", $?&255));
 	} else {
 	    printf (gtx("%s failed with return code 15, shadow not enabled, password aging cannot be set. Continuing.\n"), $chage);
 	}
@@ -473,7 +473,7 @@ if ($action eq "adduser") {
 	if (defined($new_gid)) { $ingroup_name = getgrgid($new_gid); }
 	elsif ($ingroup_name) { $new_gid = getgrnam($ingroup_name); }
 	elsif ($make_group_also){ $new_gid=$new_uid; $ingroup_name=$new_name; }
-	else { dien (gtx("Internal error")); }
+	else { dief (gtx("Internal error")); }
     }
 
     &invalidate_nscd();
@@ -628,7 +628,7 @@ sub create_homedir {
   else {
       printf gtx("Creating home directory `%s' ...\n"),$home_dir if $verbose;
       $undohome = $home_dir;
-      &mktree($home_dir) || &cleanup(sprintf(gtx("Couldn't create %s: %s.\n"), $home_dir, $!));
+      &mktree($home_dir) || &cleanup(sprintf(gtx("Couldn't create home directory `%s': %s.\n"), $home_dir, $!));
       chown($new_uid, $new_gid, $home_dir)
 	  || &cleanup("chown $new_uid:$new_gid $home_dir: $!\n");
       $dir_mode = get_dir_mode($make_group_also);
@@ -774,7 +774,7 @@ sub copy_to_dir {
 	mkdir("$todir/$file", 700) || &cleanup("mkdir: $!");
     }
     else {
-	&cleanup(sprintf(gtx("Can't deal with %s.\nIt is not a dir, file, or symlink.\n"), "$fromdir/$file"));
+	&cleanup(sprintf(gtx("Cannot deal with %s.\nIt is not a dir, file, or symlink.\n"), "$fromdir/$file"));
     }
     
     chown($newu, $newg, "$todir/$file")
