@@ -1,8 +1,10 @@
 adduser (3.93.0) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * More patches for program output.
+    Thanks again to Tobias Toedter. Closes: #378539
 
- -- Marc Haber <mh+debian-packages@zugschlus.de>  Sun, 16 Jul 2006 21:58:33 +0000
+ -- Marc Haber <mh+debian-packages@zugschlus.de>  Mon, 17 Jul 2006 16:25:38 +0000
 
 adduser (3.93) unstable; urgency=low
 
